--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ PORT=3001
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=boilerplate_db
-DB_USER=postgres
-DB_PASSWORD=password
+DB_USER=your_username
+DB_PASSWORD=your_password
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
