Update test environment configuration and add extensive database seed files for roles, permissions, job categories, and candidates. Introduce performance testing threshold in .env.test for enhanced testing accuracy.

--- a/.env.test
+++ b/.env.test
@@ -5,7 +5,7 @@ PORT=3001
 # Database configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=boilerplate_db_test
+DB_NAME=new_candidate_careers_api_test
 DB_USER=postgres
 DB_PASSWORD=password
 
@@ -66,3 +66,6 @@ MAIL_FROM_ADDRESS=noreply@yourapp.com
 
 # Email Development Settings
 MAIL_LOG_ONLY=true
+
+# Performance testing configuration
+TEST_PERFORMANCE_THRESHOLD_MS=1500  # 1.5 seconds for stricter testing
