Add comprehensive session management system
Introduces a full session management architecture including session creation, validation, token refresh, logout, and session revocation. Adds new configuration, middleware, service, and in-memory store for sessions, with integration into the authentication controller and routes. Includes extensive integration and unit tests for session flows. Updates environment variables to support refresh token secrets and expiry.

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 # Environment variables
 NODE_ENV=test
-PORT=3001
+PORT=3002
 
 # Database configuration
 DB_HOST=localhost
@@ -11,6 +11,7 @@ DB_PASSWORD=password
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-this-in-production
 JWT_ACCESS_TOKEN_EXPIRY=15m
 JWT_REFRESH_TOKEN_EXPIRY=7d
 JWT_VERIFICATION_TOKEN_EXPIRY=1h
