Update .gitignore to include additional temporary and cursor-related files
- Add rules for ignoring .cursor and .mcp.json files to streamline project management.
- Ensure .github/copilot-instructions.md is also ignored to maintain a clean repository.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Cursor-related
+.cursor/rules/byterover-rules.mdc
+.github/copilot-instructions.md
+.mcp.json
